center left align fixed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -141,9 +141,9 @@ footer section {
   --skyblue: #30A0E0;
   --seablue: #006BBB; 
 }
-.container {
-  text-align: center;
-}
+// .container {
+//   text-align: center;
+// }
 .sample {
   background-color: white;
 
@@ -185,6 +185,7 @@ footer section {
   }
 
   .product-index-item {
+    text-align: center;
     padding-top: 10px;
     padding-bottom: 10px;
     margin-top: 10px;
